--- a/davis_calibration/CMakeLists.txt
+++ b/davis_calibration/CMakeLists.txt
@@ -9,6 +9,7 @@ project(davis_calibration)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  URX
 )
 
 ## System dependencies are found with CMake's conventions
